--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,9 @@
 @charset "utf-8";
 
 @font-face {
-   font-family: "TBI";
-     src: url('fonts/Roboto-Bold.ttf'); 
-     /* IE9 Compat Modes */
-     src: url('fonts/Roboto-Medium.ttf') 
-     src: url('fonts/Roboto-Regular.ttf') 
-     src: url('fonts/Roboto.ttf') format('embedded-opentype'), /* IE6-IE8 */
-          url('fonts/Roboto.ttf') format('woff2'), /* Super Modern Browsers */
-          url('fonts/Roboto.ttf') format('woff'), /* Pretty Modern Browsers */
-          url('fonts/Roboto.ttf')  format('truetype'), /* Safari, Android, iOS */
-          url('fonts/Roboto.ttf') format('svg'); /* Legacy iOS */
+   font-family: 'TBI';
+     src: url('Roboto-Bold.ttf') format('truetype'),
+      url('Roboto-Medium.ttf'), url('Roboto-Regular.ttf') ;
 }
 .sliders{
 	background-color: #212121;
