--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,10 @@
 	display: flex;
 
 }
+.dropdown{
+	display: none;
+}
+
 .text h1{
 	font-family: Roboto;
 	font-weight: bold;
@@ -334,8 +338,13 @@ a:visited{
          }
      }
 .maintext{
-	padding-top:460px;
-	padding-bottom:380px;
+	    left: 0;
+    vertical-align: middle;
+    position: absolute;
+    top: 45%;
+    bottom: 0;
+    right: 0;
+
 }
 
 @media only screen and (max-width: 1268px){
@@ -345,7 +354,8 @@ a:visited{
 		display: block;
 		vertical-align: center;
 		margin-right: auto;
-		padding: 50px;
+		margin-top: -120px;
+		padding: 10px;
 	}
 	.logo5{
 		display: block;
@@ -353,17 +363,14 @@ a:visited{
 		display: block;
 		vertical-align: center;
 		margin-right: auto;
-		padding: 50px;
+		padding: 10px;
 	}
 	.maintext{
 		text-align: center;
-		padding-top: 50px;
-		padding-bottom: 200px;
+		
 	}
 }
-.foot{
-	color:#fcfcfc; font-weight:bolder;font-size:28px;
-}
+
 @media only screen and (max-width:1000px){
     .underwhite {
 		  margin-left: 0px !important;
@@ -399,10 +406,10 @@ a:visited{
 	font-size: 1em;
 }
 .contact h3{
-	font-size: 1.2em;
+	font-size: 1em;
 }
 .contact p{
-	font-size: 0.8em;
+	font-size: 0.5em;
 }
 .borderdown h3{
 	font-size: 0.5em;
@@ -611,19 +618,22 @@ pre {
 
 }
 .footer{
+	position:absolute;
+	 bottom: 0;
+	 height: 170px;
 	background-color: #171717;
-	font-family: Roboto ;
-	color: #fcfcfc;
-	font-weight: 200;
-	font-size: 22px;
 }
 .borderdown{
+	margin:0;
 	text-align: center;
-	bottom:0;
-	position: absolute;
 	color:#fcfcfc;
 	font-family: Roboto;
 	font-size: 22px;
 	background-color: #212121;
 }
-
+html,body{
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	position: relative;
+}
