--- a/css/main.css
+++ b/css/main.css
@@ -11,9 +11,27 @@
 	display: flex;
 
 }
-.dropdown{
-	display: none;
+#slidernavbar{
+display: none;
 }
+.fade.ng-enter {
+  transition:0.5s linear all;
+  opacity:0;
+}
+
+/* The finishing CSS styles for the enter animation */
+.fade.ng-enter.ng-enter-active {
+  opacity:1;
+}
+.fade.ng-leave {
+  transition:0.5s linear all;
+  opacity:1;
+}
+.fade.ng-leave.ng-leave-active {
+  opacity:0;
+}
+
+
 
 .text h1{
 	font-family: Roboto;
@@ -22,7 +40,6 @@
 }
 .sliderimage{
     padding: 30px;
-    margin-left: 70px;  
 }
 .material{
 	justify-content:center;
@@ -111,12 +128,10 @@
 	background-color: #121212;
 }
 inner>.item>img {
-  margin-left: 130px !important;
+  margin-left: 0px !important;
   line-height: 1;
 }
-.item{
-	display: flex;
-}
+
 
   .carousel-inner > .item > img,
   .carousel-inner > .item > a > img {
@@ -295,7 +310,29 @@ a:visited{
 .mobile{
 	display: none;
 }
+@media screen and (max-width: 1140px){
+	#slidernavbar{
+		display: block;
+	}
+	#mainnavbar{
+		display: none;
+	}
+	.links2{
+	padding: 4px;
+	    list-style-type: none;
+	    clear: both !important;
+	    text-align: center;
+	    font-family: Roboto;
+	    color: white;
+	    font-size: 1.2em;
+	}
+	.links2 a:hover{
+		text-decoration: none;
+		color: orange;
+		background-color: none;
 
+	}
+}
 @media screen and (max-width: 1268px) {
          .side-collapse-container{
              width:100%;
@@ -397,7 +434,7 @@ a:visited{
     padding: 1.2rem;
 	}
 	.carousel-inner > .item > img, .carousel-inner > .item > a > img {
-    width: 100%; 
+    width: 70%; 
     margin: auto;
 }
 .text h1{
