--- a/views/CSR-Partnership/csrpartnership.html
+++ b/views/CSR-Partnership/csrpartnership.html
@@ -75,7 +75,7 @@
    <div class="borderight col-lg-3 col-md-3">
        <h1 class="linkhead">OUR <br>STARTUPS</h1>
    </div>
-   <div class="col-lg-1 col-md-1"><img style="margin-top:-21px"src="../images/line.png"></div>
+   <div class="col-lg-1 col-md-1"><img style="margin-top:-21px"src="../../images/line.png"></div>
    <ul>
        <li class="linkdrop col-lg-2 col-md-2"><a href="#">Projects<br>Under Incubation</a></li>
        <li class="linkdrop col-lg-2 col-md-2"><a href="#">Graduated<br> Companies</a></li>
@@ -88,7 +88,7 @@
    <div class="borderight col-lg-2 col-md-2">
        <h1 class="linkhead">NEWS & <br>EVENTS</h1>
    </div>
-   <div class="col-lg-1 col-md-1"><img style="margin-top:-21px"src="../images/line.png"></div>
+   <div class="col-lg-1 col-md-1"><img style="margin-top:-21px"src="../../images/line.png"></div>
    <ul>
        <li class="linkdrop col-lg-3 col-md-3"><a href="">Promotional<br>Events</a></li>
     <li class="linkdrop col-lg-3 col-md-3"><a href="">Newsletter &<br>Press Release</a></li>
@@ -142,12 +142,14 @@
       </div>
       </header>
       <body>
-      <div class="text col-lg-12 col-md-12 col-xs-12 col-sm-12">
+      <div class="text container-fluid">
+      <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12">
+      
       <h1>CSR PARTNERSHIP</h1>
       <p>
       As per Section 135 of the Companies Act 2013, large companies are expected to spend 2% of the average net profits towards Corporate Social Responsibility Projects. 
 
-VIT Technology Business Incubator is a non-profit technology business incubator located within an academic organization which is approved by the Central Government and hence eligible under Section 135, Schedule 7 of the Companies Act 2013. Please visit the link http://www.mca.gov.in/Ministry/pdf/CompaniesActNotification3_2014.pdf , see item (ix) under Schedule VII for details. This proposal will allow companies to invest up to 2% of its net profits in VITTBI and account for it as CSR expenditure. 
+VIT Technology Business Incubator is a non-profit technology business incubator located within an academic organization which is approved by the Central Government and hence eligible under Section 135, Schedule 7 of the Companies Act 2013. Please visit the link <a href="http://www.mca.gov.in/Ministry/pdf/CompaniesActNotification3_2014.pdf">CompaniesActNotification3_2014</a> , see item (ix) under Schedule VII for details. This proposal will allow companies to invest up to 2% of its net profits in VITTBI and account for it as CSR expenditure. 
 
 VIT Technology Business Incubator is eligible to receive funding support under Section 135, Schedule 7 of the Companies Act 2013 because:
 
@@ -169,6 +171,8 @@ Activities undertaken
 Utilization of funds/ financial report against planned budget
 Impact of activities undertaken against pre-decided impact metrics
 For more details and engagement, please contact: </p>
+
+</div>
 <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12">
 <h3>The General Manager :-</h3>
 <p >
@@ -182,29 +186,10 @@ Email: vittbi@vit.ac.in , vittbi@yahoo.co.in <br>
 Website :www.vit.ac.in/tbi , www.vittbi.com<br>
 </p>
 </div>
+</div>
 
-</div>
-<footer class="footer">
-   <div class="row">
-    <div class="col-lg-8">
 
-    
-</div>
- <div class="contact col-lg-4 col-md-6 col-sm-12 col-xs-12 ">
-  <h3>Address</h3>
-  <p>VIT - Technology Business Incubator,
-Vellore Institute of Technology,
-Vellore – 632 014, Tamil Nadu, India. 
-Tel. +91 416 224 3097
-Email: vittbi@vit.ac.in, vittbi@yahoo.co.in </p>
-</div>
-</div>
-<div class="row">
-<div class="borderdown col-lg-12 col-md-12 col-sm-12 col-xs-12">
-    <h4>© 2014 Copyright Vellore Institute Of Technology. All rights reserved.</h4>
-</div>
-</div> 
-</footer>
+
       
       </body>
       </html>
