--- a/views/CSR-Partnership/csr.css
+++ b/views/CSR-Partnership/csr.css
@@ -7,7 +7,7 @@ html,body{
 }
 .text{
     margin-top:140px;
-	padding:20px;
+	padding:0px;
 }
 .text p{
 	font-size:18px;
@@ -29,7 +29,7 @@ html,body{
 }
 @media screen only and (max-width: 1200px){
 	.text{
-		margin-top: 40px;
+		margin-top: 0px !important;
 	}
 	.text p{
 		font-size: 1em;
